overflow fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,8 @@ body {
     height: 100vh;
     width: 100%;
     margin: 0;
+    overflow-x: hidden;
+
 }
 
 header {
